--- a/test/Main.storyboard
+++ b/test/Main.storyboard
@@ -378,6 +378,7 @@
                         <segue destination="DLl-4e-dr5" kind="push" identifier="showComments" id="Gew-Cm-GfC"/>
                         <segue destination="Au9-qS-WON" kind="push" identifier="showProblem" id="pfp-yp-8sB"/>
                         <segue destination="1JR-ru-0ZN" kind="push" identifier="showNewProblem" id="rKZ-ID-khw"/>
+                        <segue destination="PoK-li-n8t" kind="modal" id="qqx-FE-dyK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yfE-w6-zSF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -527,6 +528,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="86E-p4-xKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="226" y="2476"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Oth-D3-Ee5">
+            <objects>
+                <viewController id="PoK-li-n8t" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="quX-C7-Rqu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="emq-JO-WoD">
+                                <rect key="frame" x="0.0" y="7" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jT8-e1-p9X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="670" y="2469"/>
         </scene>
         <!--Detailed Problem-->
         <scene sceneID="XFV-yv-WaZ">
